Closed Bug 1891583 Opened 1 month ago Closed 1 month ago

High frequency Assertion failure: aHeight > 0, at /builds/worker/checkouts/gecko/widget/windows/RemoteBackbuffer.cpp:93 | single tracking bug

Categories

(Core :: Widget: Win32, defect, P5)

defect

Tracking

()

RESOLVED FIXED
127 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox125 --- unaffected
firefox126 --- unaffected
firefox127 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: emilio)

References

(Regression)

Details

(4 keywords)

Attachments

(1 file)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=454592780&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/KScNROGiSi2s5RH8QX4sng/runs/0/artifacts/public/logs/live_backing.log


TEST-START | toolkit/components/alerts/test/test_principal.html
[task 2024-04-15T19:53:05.796Z] 19:53:05     INFO - GECKO(3208) | [Parent 6856, Main Thread] WARNING: NS_ENSURE_TRUE(root) failed: file /builds/worker/checkouts/gecko/layout/base/nsDocumentViewer.cpp:2588
[task 2024-04-15T19:53:05.821Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::renderer::init] asking to enable_gpu_markers but no supporting extension was found
[task 2024-04-15T19:53:05.823Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2024-04-15T19:53:05.824Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2024-04-15T19:53:05.824Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2024-04-15T19:53:05.839Z] 19:53:05     INFO - GECKO(3208) | [GPU 3300, Compositor] WARNING: Possibly dropping task posted to updater thread: file /builds/worker/checkouts/gecko/gfx/layers/apz/src/APZUpdater.cpp:395
[task 2024-04-15T19:53:05.885Z] 19:53:05     INFO - GECKO(3208) | [Parent 6856, Main Thread] WARNING: NS_ENSURE_TRUE(root) failed: file /builds/worker/checkouts/gecko/layout/base/nsDocumentViewer.cpp:2588
[task 2024-04-15T19:53:05.904Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::renderer::init] asking to enable_gpu_markers but no supporting extension was found
[task 2024-04-15T19:53:05.906Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2024-04-15T19:53:05.906Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2024-04-15T19:53:05.907Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2024-04-15T19:53:05.923Z] 19:53:05     INFO - GECKO(3208) | [GPU 3300, Compositor] WARNING: Possibly dropping task posted to updater thread: file /builds/worker/checkouts/gecko/gfx/layers/apz/src/APZUpdater.cpp:395
[task 2024-04-15T19:53:05.967Z] 19:53:05     INFO - GECKO(3208) | [Parent 6856, Main Thread] WARNING: NS_ENSURE_TRUE(root) failed: file /builds/worker/checkouts/gecko/layout/base/nsDocumentViewer.cpp:2588
[task 2024-04-15T19:53:05.987Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::renderer::init] asking to enable_gpu_markers but no supporting extension was found
[task 2024-04-15T19:53:05.988Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2024-04-15T19:53:05.989Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2024-04-15T19:53:05.989Z] 19:53:05     INFO - GECKO(3208) | [WARN  webrender::device::gl] Cropping texture upload Box2D((0, 0), (0, 1)) to None
[task 2024-04-15T19:53:06.002Z] 19:53:06     INFO - GECKO(3208) | [6856] Assertion failure: aHeight > 0, at /builds/worker/checkouts/gecko/widget/windows/RemoteBackbuffer.cpp:93
[task 2024-04-15T19:53:06.207Z] 19:53:06     INFO - GECKO(3208) | #01: mozilla::widget::remote_backbuffer::SharedImage::Initialize(int, int) [widget/windows/RemoteBackbuffer.cpp:93]
[task 2024-04-15T19:53:06.207Z] 19:53:06     INFO - GECKO(3208) | #02: mozilla::widget::remote_backbuffer::PresentableSharedImage::Initialize(int, int) [widget/windows/RemoteBackbuffer.cpp:232]
[task 2024-04-15T19:53:06.208Z] 19:53:06     INFO - GECKO(3208) | #03: mozilla::widget::remote_backbuffer::Provider::HandleBorrowRequest(mozilla::widget::remote_backbuffer::BorrowResponseData*, bool) [widget/windows/RemoteBackbuffer.cpp:539]
[task 2024-04-15T19:53:06.209Z] 19:53:06     INFO - GECKO(3208) | #04: mozilla::widget::remote_backbuffer::Provider::ThreadMain() [widget/windows/RemoteBackbuffer.cpp:486]
[task 2024-04-15T19:53:06.438Z] 19:53:06     INFO - GECKO(3208) | #05: _PR_NativeRunThread(void*) [nsprpub/pr/src/threads/combined/pruthr.c:399]
[task 2024-04-15T19:53:06.439Z] 19:53:06     INFO - GECKO(3208) | #06: pr_root(void*) [nsprpub/pr/src/md/windows/w95thred.c:139]
[task 2024-04-15T19:53:06.442Z] 19:53:06     INFO -  fix-stacks: error: failed to read debug info file `ucrtbase.pdb` for `C:\Windows\System32\ucrtbase.dll`
[task 2024-04-15T19:53:06.442Z] 19:53:06     INFO -  fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2024-04-15T19:53:06.443Z] 19:53:06     INFO -  fix-stacks: The system cannot find the file specified. (os error 2)
[task 2024-04-15T19:53:06.443Z] 19:53:06     INFO - GECKO(3208) | #07: time32 [C:\Windows\System32\ucrtbase.dll + 0x459e3]
[task 2024-04-15T19:53:06.444Z] 19:53:06     INFO - GECKO(3208) | #08: BaseThreadInitThunk [C:\Windows\System32\KERNEL32.DLL + 0x17ba9]
[task 2024-04-15T19:53:06.554Z] 19:53:06     INFO - GECKO(3208) | #09: DllBlocklist_Initialize [D:\task_171320821983147\build\application\firefox\mozglue.dll + 0x7f6e7]
[task 2024-04-15T19:53:06.555Z] 19:53:06     INFO - GECKO(3208) | #10: RtlInitializeExceptionChain [C:\Windows\SYSTEM32\ntdll.dll + 0x6bdab]
[task 2024-04-15T19:53:06.555Z] 19:53:06     INFO - GECKO(3208) | #11: RtlClearBits [C:\Windows\SYSTEM32\ntdll.dll + 0x6bd2f]
[task 2024-04-15T19:53:06.651Z] 19:53:06     INFO - TEST-INFO | Main app process: exit 1
[task 2024-04-15T19:53:06.651Z] 19:53:06     INFO - Buffered messages logged at 19:53:05
[task 2024-04-15T19:53:06.652Z] 19:53:06     INFO - TEST-PASS | toolkit/components/alerts/test/test_principal.html | Alerts service exists in this application 

@Emilio, could you take a look at this high frequency assertion failures? Based on backfills+retriggers, it starts when bug 1891063 landed

Flags: needinfo?(emilio)
Keywords: regression
Regressed by: 1891063
Summary: Intermittent Assertion failure: aHeight > 0, at /builds/worker/checkouts/gecko/widget/windows/RemoteBackbuffer.cpp:93 | single tracking bug → High frequency Assertion failure: aHeight > 0, at /builds/worker/checkouts/gecko/widget/windows/RemoteBackbuffer.cpp:93 | single tracking bug

I don't see how this can happen other than GetClientHeight giving us a
negative width / height (wtf).

My patch avoided messing with the window decorations when switching
transparent windows, which could potentially trigger this I guess.

In any case this should be safe, and give us more info if somehow a zero
ends up there?

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)

Set release status flags based on info from the regressing bug 1891063

Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/53c4aa0972c8
Sanitize better broken GetClientHeight values. r=sotaro
Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
Component: Alerts Service → Widget: Win32
Product: Toolkit → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: