Bug 1891583 - Sanitize better broken GetClientHeight values. r=sotaro

I don't see how this can happen other than GetClientHeight giving us a
negative width / height (wtf), or somehow huge sizes that end up
overflowing into a negative number.

My patch avoided messing with the window decorations when switching
transparent windows, which could potentially trigger this I guess.

In any case this should be safe (because we deal with it in
PresentToWindow).

Differential Revision: https://phabricator.services.mozilla.com/D207509